--- a/src/dotnetstarter/wwwroot/index.html
+++ b/src/dotnetstarter/wwwroot/index.html
@@ -3,14 +3,14 @@
 <head>
     <title>ASP.NET 5 Starter Application</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="http://cdn.thenhan.com/css/style.css" type="text/css" />
 </head>
 <body>
     <section id="contents">
         <table>
             <tr>
                 <td style='width: 30%;'>
-                    <img class="newappIcon" src="images/newapp-icon.png">
+                    <img class="newappIcon" src="http://cdn.thenhan.com/images/newapp-icon.png">
                 </td>
                 <td>
                     <h1 id="message">Hello World</h1>
